--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <i class="fa fa-check-circle"></i> 已修正复制问题
                 </span>
                 <span class="bg-gradient-to-r from-secondary/10 to-secondary/20 text-secondary font-semibold px-4 py-2 rounded-full text-sm flex items-center gap-1">
-                    <i class="fa fa-eye"></i> 增强前端展示
+                    <i class="fa fa-eye"></i> 增强前端展示，无需IPV6
                 </span>
             </div>
             
@@ -157,14 +157,14 @@
                         </a>
                     </div>
                     <div>
-                        <p class="text-gray-600 mb-3">若无法访问，选择固定版本（按优先级尝试，无法访问切换数据网）：</p>
+                        <p class="text-gray-600 mb-3">若无法访问，选择固定版本：</p>
                         <div class="flex flex-wrap gap-3">
-                            <a href="http://a1b2.eu.org:5244/d/%E4%B8%AD%E5%9B%BD%E7%A7%BB%E5%8A%A8%E4%BA%91%E7%9B%98/%E7%8E%A9%E6%9C%BA/Termux/termux-app_v0.118.3%2Bgithub-debug_arm64-v8a.apk" class="btn-primary inline-block group relative overflow-hidden">
+                            <a href="https://ghproxy.net/https://github.com/termux/termux-app/releases/download/v0.118.3/termux-app_v0.118.3+github-debug_arm64-v8a.apk" class="btn-primary inline-block group relative overflow-hidden">
                                 <div class="absolute inset-0 bg-white/20 transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-transform duration-700"></div>
                                 <i class="fa fa-download" aria-hidden="true"></i>
                                 首选版本 (33.48MB)
                             </a>
-                            <a href="http://a1b2.eu.org:5244/d/%E4%B8%AD%E5%9B%BD%E7%A7%BB%E5%8A%A8%E4%BA%91%E7%9B%98/%E7%8E%A9%E6%9C%BA/Termux/termux-app_v0.118.3%2Bgithub-debug_universal.apk" class="btn-primary inline-block bg-gradient-to-r from-gray-600 to-gray-700 hover:from-gray-700 hover:to-gray-600 group relative overflow-hidden">
+                            <a href="https://ghproxy.net/https://github.com/termux/termux-app/releases/download/v0.118.3/termux-app_v0.118.3%2Bgithub-debug_universal.apk" class="btn-primary inline-block bg-gradient-to-r from-gray-600 to-gray-700 hover:from-gray-700 hover:to-gray-600 group relative overflow-hidden">
                                 <div class="absolute inset-0 bg-white/20 transform -skew-x-12 -translate-x-full group-hover:translate-x-full transition-transform duration-700"></div>
                                 <i class="fa fa-download" aria-hidden="true"></i>
                                 备选版本 (112.32MB)
