Update download command in index.html

--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                             <span class="font-medium text-gray-800">By.消小潇</span>
                         </div>
                         <div class="command-block">
-                            <code class="long-command">wget https://download.zoho.com.cn/v1/workdrive/download/6om8b8c2a3dd4242b42d2821042add88b65d7?x-cli-msg=%7B%22isFileOwner%22%3Atrue%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D</code>
-                            <button class="command-copy" onclick="copyCommand(this, 'wget http://a1b2.eu.org:5244/d/%E4%B8%AD%E5%9B%BD%E7%A7%BB%E5%8A%A8%E4%BA%91%E7%9B%98/%E9%9D%92%E9%BE%99%E8%84%9A%E6%9C%AC/ql-backup.tar.gz')" aria-label="复制命令">
+                            <code class="long-command">wget https://tjdownload.pan.wo.cn/openapi/download?fid=UdYnQ_ymaOybH8Vx0iB1FjtoTeAFR9oftvbDyHVc3J3zzabdczsFXJlSWdz4zWKfZHEpdAjpAAjkoMAyxxyGEEBco2Zg== -O ql-backup.tar.gz</code>
+                            <button class="command-copy" onclick="copyCommand(this, 'wget https://tjdownload.pan.wo.cn/openapi/download?fid=UdYnQ_ymaOybH8Vx0iB1FjtoTeAFR9oftvbDyHVc3J3zzabdczsFXJlSWdz4zWKfZHEpdAjpAAjkoMAyxxyGEEBco2Zg== -O ql-backup.tar.gz')" aria-label="复制命令">
                                 <i class="fa fa-copy" aria-hidden="true"></i>
                                 复制
                             </button>
