--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                             <span class="font-medium text-gray-800">By.消小潇</span>
                         </div>
                         <div class="command-block">
-                            <code class="long-command">wget https://tjdownload.pan.wo.cn/openapi/download?fid=UdYnQ_ymaOybH8Vx0iB1FjtoTeAFR9oftvbDyHVc3J3zzabdczsFXJlSWdz4zWKfZHEpdAjpAAjkoMAyxxyGEEBco2Zg== -O ql-backup.tar.gz</code>
-                            <button class="command-copy" onclick="copyCommand(this, 'wget https://tjdownload.pan.wo.cn/openapi/download?fid=UdYnQ_ymaOybH8Vx0iB1FjtoTeAFR9oftvbDyHVc3J3zzabdczsFXJlSWdz4zWKfZHEpdAjpAAjkoMAyxxyGEEBco2Zg== -O ql-backup.tar.gz')" aria-label="复制命令">
+                            <code class="long-command">wget https://hcvebmuo.ap-southeast-1.clawcloudrun.com/d/%E4%B8%AD%E5%9B%BD%E7%A7%BB%E5%8A%A8%E4%BA%91%E7%9B%98/%E9%9D%92%E9%BE%99%E8%84%9A%E6%9C%AC/ql-backup.tar.gz</code>
+                            <button class="command-copy" onclick="copyCommand(this, 'wget https://hcvebmuo.ap-southeast-1.clawcloudrun.com/d/%E4%B8%AD%E5%9B%BD%E7%A7%BB%E5%8A%A8%E4%BA%91%E7%9B%98/%E9%9D%92%E9%BE%99%E8%84%9A%E6%9C%AC/ql-backup.tar.gz')" aria-label="复制命令">
                                 <i class="fa fa-copy" aria-hidden="true"></i>
                                 复制
                             </button>
